--- a/CadastroHóspedes/CadastroHóspedes.css
+++ b/CadastroHóspedes/CadastroHóspedes.css
@@ -1,46 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
+
+
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Parkinsans", Arial, Helvetica, sans-serif;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    max-width: 600px;
-    margin: auto;
-  }
-  
-  label {
-    font-size: 14px;
-    color: #ccc;
-  }
-  
-  input, select, textarea {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    font-size: 14px;
-    background-color: #222;
-    color: #fff;
-    font-family: 'Poppins';
-  }
-  
-  input:focus, textarea:focus, select:focus {
-    outline: none;
-    border: 1px solid #7ba6de;
-  }
-  
-  button {
-    background-color: #3668ba;
-    color: #fff;
-    padding: 10px 20px;
-    font-family: 'Inter';
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #2f5ca0;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 30px;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.342);
+  color: #000000;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"],
+select {
+  font-family: "Parkinsans", Arial, Helvetica, sans-serif;
+  padding: 12px 14px;
+  border-radius: 6px;
+  border: 1px solid #c9c9c9;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 15px;
+  transition: border 0.3s, background-color 0.3s;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border: 1px solid #3b74d7;
+  background-color: #3b74d7;
+}
+
+label {
+  font-size: 14px;
+  color: #000000;
+}
+
+input[type="submit"],
+input[type="reset"] {
+  background: linear-gradient(135deg, #3b74d7, #2f5ca0);
+  color: #fff;
+  padding: 12px 24px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-family: "Parkinsans", Arial, Helvetica, sans-serif;
+  transition: background 0.3s ease, transform 0.2s;
+}
+
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+  background: #468e2a;
+  transform: scale(1.03s);
+}
+
+input::placeholder {
+  color: #000000;
+}
+
+select {
+  appearance: none;
+}
