--- a/ListaHóspedes/ListaHóspedes.css
+++ b/ListaHóspedes/ListaHóspedes.css
@@ -21,32 +21,37 @@ h1 {
     margin: 0 auto;
 }
 
-.listagem {
+.cards {
+    padding: 3px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 3px;
     justify-content: center;
 }
 
-.card {
-    background-color: #111;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
+#userlist {
+    list-style: none;
+    padding: 0;
+    margin: 30px auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: center;
+    max-width: 1500px;
+}
+  
+#userlist li {
+    background-color: #fff;
+    border-left: 6px solid rgb(109, 160, 228);
     padding: 20px;
-    width: 280px;
-    transition: transform 0.3s;
+    width: 370px; /* largura fixa ou responsiva */
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+    transition: transform 0.2s;
+    box-sizing: border-box;
 }
-
-.card:hover {
+  
+#userlist li:hover {
     transform: scale(1.02);
-}
-
-.card h3 {
-    font-family: 'Inter';
-    margin-bottom: 10px;
-}
-
-.card p {
-    font-size: 14px;
-    color: #000000;
 }
