--- a/ListaHóspedes/ListaHóspedes.css
+++ b/ListaHóspedes/ListaHóspedes.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
 
 body {
@@ -9,10 +12,92 @@ body {
     padding: 0;
 }
 
+.top {
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    z-index: 100;
+  }
+  
+  .navbar {
+    background-color: #00000098;
+    color: #ffffff;
+    padding: 10px 20px;
+    display: flex;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+  }
+  
+  .navbar-brand {
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
+  
+  .navbar-menu {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    margin-right: 30px;
+  }
+  
+  .navbar-menu li a {
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s;
+  }
+  
+  .navbar-menu li a:hover {
+    color: #ffdc7c;
+  }
+  
+  .navbar-toggle {
+    display: none;
+  }
+  
+  #menuToggle {
+    display: none;
+  }
+  
+  @media screen and (max-width: 620px) {
+    .navbar-menu {
+      display: none;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 70px;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.643);
+      height: 40px;
+      align-items: center;
+      flex-direction: row;
+      gap: 20px;
+      justify-content: center;
+      transition-property: all;
+    }
+  
+    #menuToggle:checked+.navbar-toggle+.navbar-menu {
+      display: flex;
+      align-self: center;
+  
+    }
+  
+    .navbar-toggle {
+      display: block;
+      cursor: pointer;
+    }
+  
+  }
+  
+
+
 h1 {
     font-family: "Parkinsans", sans-serif;
     font-weight: 400;
     color: #000000;
+    text-align: center;
 }
 
 .container {
@@ -30,6 +115,10 @@ h1 {
     justify-content: center;
 }
 
+strong{
+    color: #ffbb00;
+}
+
 #userlist {
     list-style: none;
     padding: 0;
@@ -43,7 +132,7 @@ h1 {
   
 #userlist li {
     background-color: #fff;
-    border-left: 6px solid rgb(109, 160, 228);
+    border-left: 6px solid #ffeab1;
     padding: 20px;
     width: 370px; /* largura fixa ou responsiva */
     border-radius: 8px;
