--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -10,9 +10,93 @@
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  margin: 0;
+  margin-top: 100px;
+  padding: 0;
   font-family: "Parkinsans", Arial, Helvetica, sans-serif;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
+
+.top {
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  z-index: 100;
+}
+
+.navbar {
+  background-color: rgba(0, 0, 0, 0.643);
+  color: #ffffff;
+  padding: 10px 20px;
+  display: flex;
+  height: 70px;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.navbar-brand {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.navbar-menu {
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin-right: 30px;
+}
+
+.navbar-menu li a {
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.3s;
+}
+
+.navbar-menu li a:hover {
+  color: #ddd;
+}
+
+.navbar-toggle {
+  display: none;
+}
+
+#menuToggle {
+  display: none;
+}
+
+@media screen and (max-width: 620px) {
+  .navbar-menu {
+    display: none;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.643);
+    height: 40px;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    transition-property: all;
+  }
+
+  #menuToggle:checked+.navbar-toggle+.navbar-menu {
+    display: flex;
+    align-self: center;
+
+  }
+
+  .navbar-toggle {
+    display: block;
+    cursor: pointer;
+  }
+
+}
+
 
 /* Container do Menu */
 .menu-container {
